--- a/directConsultas/www/templates/pautas.html
+++ b/directConsultas/www/templates/pautas.html
@@ -1,17 +1,52 @@
 <ion-view>
-    <ion-content style="margin-top: 12px;">
-        
-        <div class="list">
+    <ion-content style="/*margin-top: 15px;*/">
 
-            <a class="item item-thumbnail-left" href="#" ng-repeat="pauta in Pautas">
-                <img style="background: url(http://app.directconsultas.com/utiles/imagenes/pautas/{{pauta.idPauta}}-0.jpg) no-repeat center center;background-size: 100%; 100%" alt="">
-              <h2 style="color:#184997">{{pauta.titulo}}</h2>
-              <p>{{pauta.descripcion}}</p>
-              <h3 style="color:#d06b08; float: right;margin-top: 15px;">${{pauta.precio}}</h3>
-              
-            </a>
 
+        <h5 style="float: left;color:#184997;margin: 10px;">{{nombreSubcategoria}}</h5>
+        <div ng-show="grid"><i ng-click="desactivarGrid()" style="float: right;color:#d06b08;margin: 10px;" class="ion-ios-keypad"></i></div>
+        <div ng-hide="grid"><i ng-click="activarGrid()" style="float: right;color:#d06b08;margin: 10px;" class="ion-ios-keypad-outline"></i></div>
+        <br>
+        <br>
+        <div ng-hide="grid">
+            <div class="list">
+
+                <a class="item item-thumbnail-left" href="#" ng-repeat="pauta in Pautas">
+                    <img style="background: url(http://app.directconsultas.com/utiles/imagenes/pautas/{{pauta.idPauta}}-0.jpg) no-repeat center center;background-size: 100%; 100%" alt="">
+                    <h2 style="color:#184997">{{pauta.titulo}}</h2>
+                    <p>{{pauta.descripcion}}</p>
+                    <h3 style="color:#d06b08; float: right;margin-top: 15px;">${{pauta.precio}}</h3>
+
+                </a>
+
+            </div>
         </div>
-        
+
+        <div ng-show="grid">
+            
+<!--                <div class="row responsive-md">
+                    <div class="col col-33" ng-repeat="pauta in Pautas" >
+                        
+                        <img style="width:100%; height: 110px;background: url(http://app.directconsultas.com/utiles/imagenes/pautas/{{pauta.idPauta}}-0.jpg) no-repeat center center;background-size: 100%; 100%" alt="">
+                    </div>
+                </div>-->
+            
+            <div class="row" ng-repeat="pauta in Pautas" ng-if="$index % 3 === 0">
+                <div class="col col-33" ng-if="$index < Pautas.length">
+                    <img style="width:100%; height: 110px;background: url(http://app.directconsultas.com/utiles/imagenes/pautas/{{Pautas[$index].idPauta}}-0.jpg) no-repeat center center;background-size: 100%; 100%" alt="">
+                    
+                </div>
+                <div class="col col-33" ng-if="$index + 1 < Pautas.length">
+                    <img style="width:100%; height: 110px;background: url(http://app.directconsultas.com/utiles/imagenes/pautas/{{Pautas[$index + 1].idPauta}}-0.jpg) no-repeat center center;background-size: 100%; 100%" alt="">
+                    
+                </div>
+                <div class="col col-33" ng-if="$index + 2 < Pautas.length">
+                    <img style="width:100%; height: 110px;background: url(http://app.directconsultas.com/utiles/imagenes/pautas/{{Pautas[$index + 2].idPauta}}-0.jpg) no-repeat center center;background-size: 100%; 100%" alt="">
+                    
+                </div>
+                
+            </div>
+            
+        </div>
+
     </ion-content>
 </ion-view>
